# PlaygroundOpenCL

./: .gitignore  .gitmodules  README.md
01-intro-test-cmake/: .gitignore  CMakeLists.txt  build.sh  main.cpp
01-intro-test-cmake-linux-uni/: .gitignore  CMakeLists.txt  README.md  astyle_config.astylerc  build.sh  clean.sh  createOpenClHeaders.sh  formatCode.sh
01-intro-test-cmake-linux-uni/src/: main.cpp
01-intro-test-cmake-linux-uni/src/kernels/: kernel.cl  kernel_helper.cl
01-intro-test-visual-studio/: TestCppOpenCL.sln
01-intro-test-visual-studio/TestCppOpenCL/: TestCppOpenCL.cpp  TestCppOpenCL.vcxproj  TestCppOpenCL.vcxproj.filters
02-intro-example-simple/: 02-intro-example-simple.sln  02-intro-example-simple.vcxproj  02-intro-example-simple.vcxproj.filters  build.sh  kernel.cl  main.cpp  s.cpp
